--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://t.me/azamatxabibullayev">Telegram</a></p>
+          <p><a href="https://t.me/aza_developer">Telegram</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -385,7 +385,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.instagram.com/azamat__xabibullayev/">Instagram</a></p>
+          <p><a href="https://www.instagram.com/aza__developer/">Instagram</a></p>
         </div>
         <div class="contact-info-container">
           <img
