resume.pdf updated

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Django ORM</h3>
+                  <h3>Aiogram</h3>
                   <p>Advance</p>
                 </div>
               </article>
@@ -205,8 +205,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <h3>Telebot</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -216,7 +216,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML CSS</h3>
+                  <h3>HTML CSS JavaScript</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -249,8 +249,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>GitHub</h3>
-                  <p>Intermediate</p>
+                  <h3>MySQL</h3>
+                  <p>Advance</p>
                 </div>
               </article>
               <article>
